force-app/main/default/objects/ServiceResource/fields/FSM_BaseLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_BaseLocation__c</fullName>
    <description>This is the Resource base location from which the resource starts and ends their working day. this is used to select the correct resource availability rule in the scheduling policy</description>
    <label>Base Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Depot</fullName>
                <default>true</default>
                <label>Depot</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>