force-app/main/default/objects/ServiceResource/fields/FSM_City__c.field-meta.xml
<CustomField>
    <fullName>FSM_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>