force-app/main/default/objects/ServiceResource/fields/FSM_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>FSM_CompanyName__c</fullName>
    <description>Created as a part of SFS-5480
Updated as part of SFS-6635</description>
    <formula>TEXT(RelatedRecord.FSM_ContractorOrganisation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>