force-app/main/default/objects/ServiceResource/fields/FSM_Contractor__c.field-meta.xml
<CustomField>
    <fullName>FSM_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3038</description>
    <label>Contractor</label>
    <type>Checkbox</type>
</CustomField>