force-app/main/default/objects/ServiceResource/fields/FSM_Country__c.field-meta.xml
<CustomField>
    <fullName>FSM_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>