force-app/main/default/objects/ServiceResource/fields/FSM_County__c.field-meta.xml
<CustomField>
    <fullName>FSM_County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>