force-app/main/default/objects/ServiceResource/fields/FSM_CustomerAppointmentCapacity__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAppointmentCapacity__c</fullName>
    <description>Customer Appointment Capacity Count per Day, user story sfs-46</description>
    <inlineHelpText>Customer Appointment Capacity Count per Day</inlineHelpText>
    <label>Customer Appointment Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>