force-app/main/default/objects/ServiceResource/fields/FSM_CustomerAppointmentDurationCapacity__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAppointmentDurationCapacity__c</fullName>
    <description>Created as a part of SFS-1793</description>
    <inlineHelpText>Customer Appointment Duration Capacity Per Day</inlineHelpText>
    <label>Customer Appointment Duration Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60 Minutes</fullName>
            </value>
            <value>
                <fullName>90 Minutes</fullName>
            </value>
            <value>
                <fullName>120 Minutes</fullName>
            </value>
            <value>
                <fullName>330 Minutes</fullName>
            </value>
            <value>
                <fullName>480 Minutes</fullName>
            </value>
            <value>
                <fullName>180 Minutes</fullName>
                <isActive>false</isActive>
                <label>180 Minutes</label>
            </value>
            <value>
                <fullName>240 Minutes</fullName>
                <isActive>false</isActive>
                <label>240 Minutes</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>