force-app/main/default/objects/ServiceResource/fields/FSM_EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_EmployeeNumber__c</fullName>
    <description>Created as a part of SFS-5480</description>
    <formula>FSM_ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Number</label>
    <type>Text</type>
</CustomField>