force-app/main/default/objects/ServiceResource/fields/FSM_ExcludeOnHoldReasons__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExcludeOnHoldReasons__c</fullName>
    <formula>$Permission.FSM_ExcludeOnHoldReasons</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude On-Hold Reasons</label>
    <type>Checkbox</type>
</CustomField>