force-app/main/default/objects/ServiceResource/fields/FSM_JobTitle__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobTitle__c</fullName>
    <description>SFI-1645</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>