force-app/main/default/objects/ServiceResource/fields/FSM_JoiningDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_JoiningDate__c</fullName>
    <description>SFI-467</description>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>