force-app/main/default/objects/ServiceResource/fields/FSM_LeavingDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_LeavingDate__c</fullName>
    <description>SFI-467</description>
    <label>Leaving Date</label>
    <type>Date</type>
</CustomField>