force-app/main/default/objects/ServiceResource/fields/FSM_Phone__c.field-meta.xml
<CustomField>
    <fullName>FSM_Phone__c</fullName>
    <description>SFI-23 &amp; SFI-701</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>