force-app/main/default/objects/ServiceResource/fields/FSM_PostCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_PostCode__c</fullName>
    <label>Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>