force-app/main/default/objects/ServiceResource/fields/FSM_ResourceSortOrder__c.field-meta.xml
<CustomField>
    <fullName>FSM_ResourceSortOrder__c</fullName>
    <description>Free Text Field for Resource Sort Order in Gantt .Created as a part of SFS-4801 .</description>
    <label>Resource Sort Order in Gantt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>