force-app/main/default/objects/ServiceResource/fields/FSM_SeniorTechnicalSupervisor__c.field-meta.xml
<CustomField>
    <fullName>FSM_SeniorTechnicalSupervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFL-331
Jobs will not auto-schedule when this check is set “True”</description>
    <label>Senior Technical Supervisor</label>
    <type>Checkbox</type>
</CustomField>