force-app/main/default/objects/ServiceResource/fields/FSM_Service_Territory_Member_Deletion__c.field-meta.xml
<CustomField>
    <fullName>FSM_Service_Territory_Member_Deletion__c</fullName>
    <description>FS-155</description>
    <label>Service Territory Member Deletion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>