force-app/main/default/objects/ServiceResource/fields/FSM_ServiceTerritoryMemberDeletion_Date__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceTerritoryMemberDeletion_Date__c</fullName>
    <description>SFS-155</description>
    <label>Service Territory Member Deletion Date</label>
    <type>DateTime</type>
</CustomField>