force-app/main/default/objects/ServiceResource/fields/FSM_ShowLiveLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_ShowLiveLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created as part of SFS-5157</description>
    <label>Show Live Location</label>
    <type>Checkbox</type>
</CustomField>