force-app/main/default/objects/ServiceResource/fields/FSM_STMEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_STMEffectiveDate__c</fullName>
    <description>SFI-683</description>
    <label>STM Effective Date</label>
    <type>Date</type>
</CustomField>