force-app/main/default/objects/ServiceResource/fields/FSM_Street__c.field-meta.xml
<CustomField>
    <fullName>FSM_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>