force-app/main/default/objects/ServiceResource/fields/FSM_TravelRestriction__c.field-meta.xml
<CustomField>
    <fullName>FSM_TravelRestriction__c</fullName>
    <defaultValue>&quot;No Restriction&quot;</defaultValue>
    <description>SFS-139</description>
    <label>Travel Restriction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>No Restriction</fullName>
                <default>true</default>
                <label>No Restriction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>