force-app/main/default/objects/ServiceResource/fields/FSM_WorkCentreExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkCentreExternalId__c</fullName>
    <description>SFI-701</description>
    <label>Work Centre External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>