force-app/main/default/objects/ServiceResource/validationRules/FSM_PreventResourceCreationScheduler.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_PreventResourceCreationScheduler</fullName>
    <active>true</active>
    <description>Created as a part of SFS-6512</description>
    <errorConditionFormula>AND(ISNEW(), 
NOT(ISPICKVAL(ResourceType,&apos;C&apos;)),
$Permission.FSM_PreventServiceResourceCreation)</errorConditionFormula>
    <errorMessage>Insufficient Access! You don&apos;t have access to create records apart from crew.</errorMessage>
</ValidationRule>