force-app/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>FSM_Phone__c</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>CreatedDate</columns>
    <columns>FSM_WorkCentreExternalId__c</columns>
    <columns>FSM_JobTitle__c</columns>
    <columns>FSM_CustomerAppointmentCapacity__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Resources</label>
</ListView>