force-app/main/default/objects/ServiceResource/listViews/Copy_of_All_Service_Resources.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Service_Resources</fullName>
    <columns>IsActive</columns>
    <columns>FSM_EmployeeNumber__c</columns>
    <columns>Name</columns>
    <columns>FSM_PostCode__c</columns>
    <columns>FSM_TravelRestriction__c</columns>
    <columns>FSM_Phone__c</columns>
    <columns>FSM_BaseLocation__c</columns>
    <columns>FSM_CustomerAppointmentCapacity__c</columns>
    <columns>FSM_CustomerAppointmentDurationCapacity__c</columns>
    <columns>FSM_ShowLiveLocation__c</columns>
    <columns>FSM_WorkCentreExternalId__c</columns>
    <columns>FSL__GanttLabel__c</columns>
    <filterScope>Everything</filterScope>
    <label>Resource Overview</label>
    <sharedTo>
        <group>FSM_Metering</group>
    </sharedTo>
</ListView>