force-app/main/default/objects/ServiceResource/listViews/Max_Travel_Radius.listView-meta.xml
<ListView>
    <fullName>Max_Travel_Radius</fullName>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>FSM_WorkCentreExternalId__c</columns>
    <columns>Name</columns>
    <columns>FSM_TravelRestriction__c</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_WorkCentreExternalId__c</field>
        <operation>notContain</operation>
        <value>6000M03,M01</value>
    </filters>
    <label>Max Travel Radius</label>
    <sharedTo>
        <group>FSM_Metering</group>
    </sharedTo>
</ListView>