force-app/main/default/objects/ServiceResource/listViews/Service_Resources_TechAccess.listView-meta.xml
<ListView>
    <fullName>Service_Resources_TechAccess</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>IsActive</columns>
    <columns>FSM_WorkCentreExternalId__c</columns>
    <columns>FSM_Phone__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>FSM_JobTitle__c</columns>
    <columns>FSM_CustomerAppointmentCapacity__c</columns>
    <columns>FSM_SeniorTechnicalSupervisor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Service Resources - Tech Access</label>
    <sharedTo>
        <group>FSM_Tech_Access</group>
    </sharedTo>
</ListView>