force-app/main/default/objects/ServiceResource/listViews/Warwick.listView-meta.xml
<ListView>
    <fullName>Warwick</fullName>
    <columns>Name</columns>
    <columns>FSM_Phone__c</columns>
    <columns>FSM_EmployeeNumber__c</columns>
    <columns>FSL__GanttLabel__c</columns>
    <columns>IsActive</columns>
    <columns>FSM_WorkCentreExternalId__c</columns>
    <columns>FSM_BaseLocation__c</columns>
    <columns>FSM_PostCode__c</columns>
    <columns>FSM_CustomerAppointmentCapacity__c</columns>
    <columns>FSM_CustomerAppointmentDurationCapacity__c</columns>
    <columns>FSM_TravelRestriction__c</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_BusinessUnit__c</field>
        <operation>equals</operation>
        <value>Metering</value>
    </filters>
    <filters>
        <field>FSM_WorkCentreExternalId__c</field>
        <operation>equals</operation>
        <value>6301M03</value>
    </filters>
    <label>Warwick - Capacity</label>
    <sharedTo>
        <group>FSM_Metering</group>
    </sharedTo>
</ListView>